force-app/main/default/objects/QuoteLineItem/fields/Catalog_Response__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Response__c</fullName>
    <description>Catalog Response</description>
    <label>Complete Catalog Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>