force-app/main/default/objects/QuoteLineItem/fields/Concept__c.field-meta.xml
<CustomField>
    <fullName>Concept__c</fullName>
    <formula>TEXT(Quote.Opportunity.Concept__c)</formula>
    <label>Concept</label>
    <type>Text</type>
</CustomField>