force-app/main/default/objects/QuoteLineItem/fields/Gift_Wrap_eligible__c.field-meta.xml
<CustomField>
    <fullName>Gift_Wrap_eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Wrap eligible?</label>
    <type>Checkbox</type>
</CustomField>