force-app/main/default/objects/QuoteLineItem/fields/Gift_Wrap_VAS__c.field-meta.xml
<CustomField>
    <fullName>Gift_Wrap_VAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Wrap selected?</label>
    <type>Checkbox</type>
</CustomField>