force-app/main/default/objects/QuoteLineItem/fields/Monogram_eligible__c.field-meta.xml
<CustomField>
    <fullName>Monogram_eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monogram eligible?</label>
    <type>Checkbox</type>
</CustomField>