force-app/main/default/objects/QuoteLineItem/fields/Monogram_VAS__c.field-meta.xml
<CustomField>
    <fullName>Monogram_VAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monogram selected?</label>
    <type>Checkbox</type>
</CustomField>