force-app/main/default/objects/QuoteLineItem/fields/Personalize_eligible__c.field-meta.xml
<CustomField>
    <fullName>Personalize_eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalize eligible?</label>
    <type>Checkbox</type>
</CustomField>