force-app/main/default/objects/QuoteLineItem/fields/Personalize_VAS__c.field-meta.xml
<CustomField>
    <fullName>Personalize_VAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalize selected?</label>
    <type>Checkbox</type>
</CustomField>