force-app/main/default/objects/QuoteLineItem/validationRules/Gift_Wrap_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gift_Wrap_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Priorvalue(Gift_Wrap_VAS__c)=false,ISCHANGED(Gift_Wrap_VAS__c)=true,Priorvalue(Gift_Wrap_eligible__c)=false)</errorConditionFormula>
    <errorDisplayField>Gift_Wrap_VAS__c</errorDisplayField>
    <errorMessage>Product is Gift Wrap ineligible</errorMessage>
</ValidationRule>