force-app/main/default/objects/QuoteLineItem/validationRules/Monogram_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Monogram_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Priorvalue(Monogram_VAS__c)=false,ISCHANGED(Monogram_VAS__c)=true,Priorvalue(Monogram_eligible__c)=false)</errorConditionFormula>
    <errorDisplayField>Monogram_VAS__c</errorDisplayField>
    <errorMessage>Product is Monogram ineligible</errorMessage>
</ValidationRule>