force-app/main/default/objects/QuoteLineItem/validationRules/Personalize_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Personalize_Field_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Priorvalue(Personalize_VAS__c)=false,ISCHANGED(Personalize_VAS__c)=true,Priorvalue(Personalize_eligible__c)=false)</errorConditionFormula>
    <errorDisplayField>Personalize_VAS__c</errorDisplayField>
    <errorMessage>Product is Personalize ineligible</errorMessage>
</ValidationRule>